# Acadify

./: .env  .gitignore  .gitlab-ci.yml  00_LEE_ESTO_PRIMERO.md  ANALISIS_DETALLADO_BUGS_ARCHIVOS_ENTREGAS.md  ANALISIS_FINAL_Y_PRÓXIMOS_PASOS.md  ARCHIVOS_DUPLICADOS_RESUELTO.md  AUDITORIA_MINUCIOSA_TAREAS.md  AVATAR_ASSETS_STRUCTURE.md  AVATAR_FIXES_SUMMARY.md  AVATAR_SYSTEM_COMPLETED.md  AVATAR_SYSTEM_SUMMARY.md  AVATAR_TESTING_GUIDE.md  BUG_FIX_SOLO_1_ARCHIVO.md  CAMBIOS_EMOJIS_Y_ARCHIVOS.md  CAMBIOS_REALIZADOS_20251121.md  CHECKLIST_BACKEND.md  CHECKLIST_BASE_DATOS.md  CHECKLIST_ENTREGA_TAREA_FIX.md  CHECKLIST_FRONTEND.md  CHECKLIST_INTEGRACION_IA.md  CHECKLIST_LEGAL.md  CHECKLIST_SEGURIDAD.md  CHECKLIST_TESTING_COMPLETO.md  CHECKLIST_UX.md  COMANDOS_LISTOS.md  COMPREHENSIVE_AUDIT_REPORT.md  CONFIGURACION_COMPLETADA.md  CORRECCION_FINAL_GUARDADO.md  CORRECIONES_REALIZADAS.md  DIAGNOSE_NOW.sh  DIAGNOSTICO_COMPLETO_ARCHIVOS_ENTREGAS.md  DIAGNOSTICO_FINAL_6_ARCHIVOS.md  DIAGNOSTICO_FRONTEND.md  DIAGNOSTIC_DEEP_6FILES.md  ENTREGA_TAREA_FIX_ANALISIS.md  FASE1A_COMPLETADA_SEGURIDAD.md  FASE1B_COMPLETADA_GAMIFICACION.md  FASE1B_SUMMARY.md  FASE_1B_RESUMEN_LOGROS.md  (+81 more)
backend/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruffignore  BACKUP_ANALYSIS.md  BUGS_FOUND.md  CORRECCIONES.md  CORRECCIONES_FASE2.md  FIX_INSTITUCIONES_401_405.md  OAUTH_FINAL_CONFIG.md  OAUTH_QUICK_START.md  OAUTH_URL_FIX.md  PROJECT_STATUS.md  README_BACKEND.md  SOLUCION_LOGIN.md  TESTING_SESSION_FINAL.md  UPDATE_OAUTH_PORT.md  alembic.ini  avatar_routes_simple.py  create_all_test_users.py  fix_avatar_paths.py  fix_null_file_sizes.py  generate_manifest.py  generate_simple_manifest.py  generate_test_token.py  manual_fix.sql  normalize_images.py  normalize_simple.py  populate_assets.py  pyproject.toml  pytest.ini  requirements.txt  restart_backend_clean.sh  restart_with_oauth.sh  run_dev.py  simple_email_test.py  temp_function.py  test_attachments_flow.py  test_auth_simple.sh  (+17 more)
backend/Docs/: ANALISIS_FASE_2_VIDEOLLAMADAS.md  ANALISIS_SISTEMA_COMPLETO.md  ANALISIS_SISTEMA_GAMIFICACION.md  API_ENDPOINTS_GAMIFICACION.md  API_ENDPOINTS_VIDEOLLAMADAS.md  API_IA_GAMIFICACION.md  AUDITORIA_SISTEMA_INSTITUCIONES.md  BACKEND_TIENDA_REQUIREMENTS.md  BUGS_CORREGIDOS_SERVICE_PERIODO.md  COMPREHENSIVE_MODEL_ANALYSIS.md  DIAGRAMAS_ARQUITECTURA.md  FASE_1_COMPLETADA.md  FASE_2_VIDEOLLAMADAS_JITSI_COMPLETADA.md  FASE_6_COMPLETADA.md  GAMIFICATION_EXECUTIVE_SUMMARY.md  GUIA_INTEGRACION_FRONTEND.md  IMPLEMENTACION_GAMIFICACION_COMPLETADA.md  INICIO_RAPIDO.md  MODELOS_MEJORADOS.md  PLAN_DETALLADO_TAREAS.md  PLAN_IMPLEMENTACION_VIDEOLLAMADAS.md  PLAN_SISTEMA_ACADEMICO.md  PLAN_TRABAJO_GAMIFICACION_FASE2-6.md  PROGRESS_MODEL_ALIGNMENT.md  PUNTOS_INTEGRATION_COMPLETE.md  REFACTORIZACION_INSTITUCIONES.md  RESUMEN_EJECUTIVO_GAMIFICACION.md  RESUMEN_EJECUTIVO_TESTING.md  RESUMEN_TESTS_PERIODOS_INSCRIPCIONES.md  SERVICIOS_GAMIFICACION_IMPLEMENTADOS.md  SISTEMA_PERIODO_ACADEMICO_IMPLEMENTADO.md  TAREA_ENRICHED_SYSTEM.md  TESTING_FASE_1_REPORTE.md  TESTING_GUIDE.md  TESTING_PROGRESS_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_RESULTS_ANALYSIS.md  VIDEOLLAMADAS_API_INTEGRATION.md
backend/TEST/: check_constraint.py  check_routers.py  check_tables.py  check_usuarios.py  clean_usuarios.py  cleanup_enums.py  conftest.py  crear_tabla_invitation.py  debug_imports.py  debug_routers.py  fix_constraint.py  fix_function.py  generar_token.py  inspect_routes_module.py  test_api_integration.py  test_archivos_descarga.py  test_auth.py  test_avatar_system.py  test_calificacion_service.py  test_chat_system_e2e.py  test_chat_system_simple.py  test_clean_import.py  test_comments_api.py  test_communication_simple.py  test_communication_system.py  test_constraint_sql.py  test_data_builders.py  test_email.py  test_evaluacion_service.py  test_final_system.py  test_full_connection.py  test_gamification_enums.py  test_gamification_models.py  test_institucion_completo.py  test_institucion_curso_integration.py  test_integracion_completa.py  test_intento_service.py  test_invitacion_flow.py  test_invitacion_simple.py  test_login.py  (+16 more)
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/database/: 01_funciones.sql  02_triggers.sql  03_vistas.sql  10_create_archivos_curso.sql  AUDIT_REPORT_DETAILED.md  EXECUTIVE_SUMMARY.md  README.md  apply_database_objects.py  audit_complete_system.py  audit_db_models.py  complete_audit_report.json  complete_audit_report.txt  create_auditoria_table.sql  database_audit_report.json  fix_vistas.sh  install_procedures.sh  migrate_legacy_imports.py  stored_procedures.sql
backend/docs/: README.md
backend/migrations/: 001_sistema_misiones.sql  001_sistema_misiones_rollback.sql  MIGRACION_EXITOSA.md  README.md  ejecutar_migracion.py  ejecutar_migracion.sh
backend/scripts/: IMPLEMENTATION_GUIDE.md  PROJECT_METRICS.md  SESSION_SUMMARY.md  add_base_assets.py  add_fk_indexes.py  add_fk_indexes_correct.py  align_historial_racha.py  align_inventario_usuario.py  align_tienda_item.py  analyze_all_models.py  analyze_and_fix_all.py  analyze_curso_split.py  analyze_evaluaciones.py  analyze_existing_columns.py  analyze_grabacion.py  analyze_inscripciones.py  analyze_missing_fields.py  analyze_participante.py  analyze_performance.py  analyze_videollamada_main.py  apply_avatar_normalize.sh  apply_batches.sh  apply_dedupe_symlinks.py  audit_all_models_comprehensive.py  audit_instituciones_cursos.py  audit_structure.py  audit_validations.py  auto_fix_tests.py  avatar_generate_apply_sql.py  avatar_normalize_dryrun.py  check_and_create_indexes.py  check_assets.py  check_audit_columns.py  check_clase_columns.py  check_configuraciones_antitrampa.py  check_data.sh  check_evaluaciones.py  check_indexes.py  check_migration_status.py  check_programa_structure.py  (+131 more)
backend/src/: gamification_README.md  main.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_critical_bugs_fixes.py  test_crud_operations.py  test_institutions.py  test_integration.py  test_oauth_routes.py  test_oauth_service.py  test_performance.py  (+3 more)
(+1642 files in other folders)
